--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,3 +6,70 @@
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+
+// FancyBox
+@import "~@fancyapps/fancybox/dist/jquery.fancybox.min.css";
+
+@import "~slick-carousel/slick/slick";
+@import "~slick-carousel/slick/slick-theme";
+
+// Custom
+.card-img-top-wrap {
+    position: relative;
+
+    height: 250px;
+    width: 100%;
+
+    overflow: hidden;
+
+    & .card-img-top {
+        position: absolute;
+
+        margin-top: -50%;
+        margin-left: -50%;
+
+        max-width: 100%;
+        height: auto;
+
+        transform: translate(50%, 50%);
+    }
+}
+
+.posters_place .slick-slide {
+
+    & .poster_place-thumb {
+        display: block;
+
+        height: 140px;
+        min-height: 140px;
+        width: 100%;
+
+        @media (max-width: 1200px) {
+            & {
+                height: 100px;
+                min-height: 100px;
+            }
+        }
+
+        overflow: hidden;
+        position: relative;
+
+        & img {
+            position: absolute;
+        }
+    }
+}
+
+.slick-prev:before, .slick-next:before {
+    color: #a5a5a5;
+}
+
+.slick-next,
+.slick-prev {
+    right: 25px;
+    z-index: 10;
+}
+
+.slick-prev {
+    left: 25px;
+}
